# tea-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  teabot.py
.github/workflows/: docker-ci.yml
bot/: config.py  main.py
bot/db/: queries.py  supabase_client.py
bot/fsm/: states.py
bot/handlers/: common_handlers.py  registration_handlers.py  tea_handlers.py
bot/keyboards/: inline_keyboards.py  user_keyboards.py
