[project]
name = "tea-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiogram>=3.17.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=22.5",
    "supabase>=2.13.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
